--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.28.1
 python-dotenv==1.0.0
 PyPDF2==3.0.1
 python-docx==1.1.0
-pandas==2.1.4
+pandas>=2.2.0
 plotly==5.17.0
 groq==0.4.1
 gspread==6.0.0
