--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ PyPDF2==3.0.1
 python-docx==1.1.0
 pandas>=2.2.0
 plotly==5.17.0
-groq==0.4.1
+groq>=0.9.0
 gspread==6.0.0
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
